<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPI</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!--LOGIN-->
    <string name="login">Ingrese su usuario y clave</string>
    <string name="usuario_TV">Usuario</string>
    <string name="usuario_ET">Ingrese su usuario</string>
    <string name="clave_TV">Clave</string>
    <string name="clave_ET">Ingrese su clave</string>
    <string name="salir_But">Salir</string>
    <string name="ingresar_But">Ingresar</string>
    
    <!--MENU-->
    <string name="logo_des_IV">Logotipo SIP</string>
    <string name="menu_TV">DASHBOARD</string>
    <string name="buscar_TV">BUSCAR</string>
    <string name="buscar_desc_TV">Busque el parqueo mas cercano de donde usted se encuentre.</string>
    <string name="avisos_TV">AVISOS</string>
    <string name="avisos_desc_TV">Encuentre anuncios de comida, ropa, etc.</string>
    
    <!-- MENU AVISOS -->
    <string name="menu_aviso_TV">AVISOS</string>
    <string name="menu_aviso_1_TV">Comida</string>
    <string name="menu_aviso_2_TV">Ropa</string>
    <string name="menu_aviso_3_TV">ET</string>
    <string name="menu_aviso_4_TV">Bancos</string>
    <string name="menu_aviso_5_TV">Otros</string>
    <string name="menu_aviso_6_TV">Vacio</string>
    <string name="menu_but">Atras</string>
    <string name="imagen">Descripcion de imagen generico</string>
    
    <!-- Lista de parqueos -->
    <string name="reversa_btn">Reservar</string>
</resources>
