<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:src="@drawable/background3"
		android:scaleType="fitXY"
		android:contentDescription="@string/imagen" >
	</ImageView>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:padding="16dp" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_aviso_TV"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:gravity="center" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:orientation="vertical"
	        android:padding="8dp"
	        android:layout_weight="1" >
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:baselineAligned="false" >
				
				<LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.33"
	                android:orientation="vertical" >
	
	                <ImageView
	                    android:id="@+id/imageView1"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_launcher"
	                    android:contentDescription="@string/imagen" />
	
	                <TextView
	                    android:id="@+id/textView2"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/menu_aviso_1_TV"
	                    android:textAppearance="?android:attr/textAppearanceSmall"
	                    android:gravity="center"
	                    android:textStyle="bold"
	                    android:textColor="@color/white" />
	
	            </LinearLayout>
	
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.33"
	                android:orientation="vertical" >
	
	                <ImageView
	                    android:id="@+id/imageView2"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_launcher"
	                    android:contentDescription="@string/imagen" />
	
	                <TextView
	                    android:id="@+id/textView3"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/menu_aviso_2_TV"
	                    android:textAppearance="?android:attr/textAppearanceSmall"
	                    android:gravity="center"
	                    android:textStyle="bold"
	                    android:textColor="@color/white"  />
	
	            </LinearLayout>
	            
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.33"
	                android:orientation="vertical" >
	
	                <ImageView
	                    android:id="@+id/imageView3"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_launcher"
	                    android:contentDescription="@string/imagen" />
	
	                <TextView
	                    android:id="@+id/textView4"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/menu_aviso_3_TV"
	                    android:textAppearance="?android:attr/textAppearanceSmall"
	                    android:gravity="center"
	                    android:textStyle="bold"
	                    android:textColor="@color/white"  />
	
	            </LinearLayout>
	
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="16dp"
	            android:baselineAligned="false" >
	
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.33"
	                android:orientation="vertical" >
	
	                <ImageView
	                    android:id="@+id/imageView4"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_launcher"
	                    android:contentDescription="@string/imagen" />
	
	                <TextView
	                    android:id="@+id/textView5"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/menu_aviso_4_TV"
	                    android:textAppearance="?android:attr/textAppearanceSmall"
	                    android:gravity="center"
	                    android:textStyle="bold"
	                    android:textColor="@color/white"  />
	
	            </LinearLayout>
	
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.33"
	                android:orientation="vertical" >
	
	                <ImageView
	                    android:id="@+id/imageView5"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_launcher"
	                    android:contentDescription="@string/imagen" />
	
	                <TextView
	                    android:id="@+id/textView6"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/menu_aviso_5_TV"
	                    android:textAppearance="?android:attr/textAppearanceSmall"
	                    android:gravity="center"
	                    android:textStyle="bold"
	                    android:textColor="@color/white"  />
	
	            </LinearLayout>
	
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.33"
	                android:orientation="vertical"
	                android:visibility="invisible" >
	
	                <ImageView
	                    android:id="@+id/imageView6"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_launcher"
	                    android:contentDescription="@string/imagen" />
	
	                <TextView
	                    android:id="@+id/textView7"
	                    android:layout_width="fill_parent"
	                    android:layout_height="wrap_content"
	                    android:text="@string/menu_aviso_6_TV"
	                    android:textAppearance="?android:attr/textAppearanceSmall"
	                    android:gravity="center"
	                    android:textStyle="bold"
	                    android:textColor="@color/white"  />
	
	            </LinearLayout>
	
	        </LinearLayout>
	
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/menu_but"
	        android:layout_gravity="center" />
	
	</LinearLayout>
</FrameLayout>